nana thari changes

--- a/Areas/Identity/Pages/Account/Logout.cshtml
+++ b/Areas/Identity/Pages/Account/Logout.cshtml
@@ -1,16 +1,17 @@
 ﻿@page
 @model LogoutModel
 @{
-    ViewData["Title"] = "Log out";
+    ViewData["Title"] = " Log Out";
 }
 
 <header>
     <h1>@ViewData["Title"]</h1>
     @{
+        <h3 class="mt-4">Are you sure to log out?</h3>
         if (User.Identity.IsAuthenticated)
         {
-            <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/", new { area = "" })" method="post">
-                <button type="submit" class="nav-link btn btn-link text-dark">Click here to Logout</button>
+            <form class="form-inline mt-5" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/", new { area = "" })" method="post">
+                <button type="submit" class="btn-outline-danger text-dark">Log Out</button>
             </form>
         }
         else
