--- a/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Areas/Identity/Pages/Account/Register.cshtml
@@ -36,7 +36,7 @@
         </form>
     </div>
     <div class="col-md-6 col-md-offset-2">
-        <h1 class="text-center">Binary Grocery Shop</h1>
+        <h1 class="text-center">Gada Electronics</h1>
     </div>
 </div>
 
