--- a/Views/Product/Create.cshtml
+++ b/Views/Product/Create.cshtml
@@ -35,7 +35,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Description" class="control-label"></label>
-                <input asp-for="Description" class="form-control" />
+                @Html.TextAreaFor(model=>model.Description,5,5,new{@class="form-control"})
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="form-group">
