--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,7 +2,78 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+<div>
+    <h2 class="text-center my-5">Buying and Selling Made Easy</h2>
+    <div class="text-center">
+        <img src="/Images/jethalal.jpg" class="" alt="..." height="500">
+    </div>
+    <div class="container-fluid" id="aboutus">
+        <div class="container my-5">
+            <div class="d-flex justify-content-between"></div>
+            <h3 class="text-center">About Us</h3>
+            <div class="container mt-2">
+                <p class="w-75 m-auto">“Gada Electronics” is a web-based shopping platform based on the business-to-consumer (B2C) type of electronic commerce. Selling products and services online through online transactions is the main objective of e-commerce. The purpose of this project is to construct and create a trustworthy website based on e-commerce ideas creating flawless yet attractive web pages. In this project, DotNet will be used to create an online store's e-commerce website. It offers the customer a selection of various electronic items. It makes it easier for the user to select items from various Brands and Categories.</p>
+            </div>
+        </div>
+    </div>
+    <hr />
+    <div class="container-fluid my-5" id="features">
+        <h3 class="text-center">Features</h3>
+        <div class="container mt-2 row">
+            <div class="col-md-2"></div>
+            <div class="col-md-4 text-center mt-2">
+                Real-time information
+            </div>
+            <div class="col-md-4 text-center mt-2">
+                Simplified pricing
+            </div>
+            <div class="col-md-2"></div>
+            <div class="col-md-2"></div>
+            <div class="col-md-4 text-center mt-2">
+                Online order processing
+            </div>
+            <div class="col-md-4 text-center mt-2">
+                24/7 client focus
+            </div>
+            <div class="col-md-2"></div>
+            <div class="col-md-2"></div>
+            <div class="col-md-4 text-center mt-2">
+                Inbulit wallet payment option
+            </div>
+            <div class="col-md-4 text-center mt-2">
+                Best Prices
+            </div>
+            <div class="col-md-2"></div>
+        </div>
+    </div>
+    <hr/>
+    <div class="container row my-5">
+        <div class="col-md-6">
+            <h3 class="text-center">Buy With Us</h3>
+            <div>Buy from Gada Electronics and get the best prices directly from the sellers.</div>
+            <p class="text-center">
+                <a asp-page="/Identity/Account/Register">Register as a Buyer</a>
+            </p>
+        </div>
+        <div class="col-md-6">
+            <h3 class="text-center">Sell With Us</h3>
+            <div>Sell from Gada Electronics and get the best exposure for your products.</div>
+            <p class="text-center">
+                <a asp-page="/Identity/Account/Register">Register as a Seller</a>
+            </p>
+        </div>
+    </div>
+    <hr/>
+    <div class="container mt-5">
+        <div class="d-flex justify-content-between"></div>
+        <div id="contact" class="container-fluid" id="features">
+            <h3 class="text-center">Contact Us</h3>
+            <div class="container mt-3 text-center">
+                <p>
+                    Contact no: 9861282203 <br>
+                    Email: gadaelectronic@gmail.com <br>
+                    Location: lainchaur
+                </p>
+            </div>
+        </div>
+    </div>
