--- a/Areas/Identity/Pages/Account/Logout.cshtml
+++ b/Areas/Identity/Pages/Account/Logout.cshtml
@@ -11,7 +11,7 @@
         if (User.Identity.IsAuthenticated)
         {
             <form class="form-inline mt-5" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/", new { area = "" })" method="post">
-                <button type="submit" class="btn-outline-danger text-dark">Log Out</button>
+                <button type="submit" class="btn btn-danger text-light">Log Out</button>
             </form>
         }
         else
