--- a/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Areas/Identity/Pages/Account/Register.cshtml
@@ -32,11 +32,8 @@
                 <label asp-for="Input.Role"></label>
                 <span asp-validation-for="Input.Role" class="text-danger"></span>
             </div>
-            <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary mt-3">Register</button>
+            <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-dark mt-3">Register</button>
         </form>
-    </div>
-    <div class="col-md-6 col-md-offset-2">
-        <h1 class="text-center">Gada Electronics</h1>
     </div>
 </div>
 
